syntax = "proto3";

package book;

option go_package = "github.com/calmato/gran-book/api/service/proto/book";

import "book/common.proto";

// Book - 書籍
message Book {
  int64 id = 1; // 書籍ID
  string title = 2; // 本のタイトル
  string title_kana = 3; // 本のタイトル(かな)
  string description = 4; // 本の説明
  string isbn = 5; // ISBN
  string publisher = 6; // 出版社名
  string published_on = 7; // 出版日
  string thumbnail_url = 8; // サムネイルURL
  string rakuten_url = 9; // 楽天ショップ URL
  string rakuten_size = 10; // 楽天ショップ 本のサイズ
  string rakuten_genre_id = 11; // 楽天ショップ 本のカテゴリ
  string created_at = 12; // 作成日時
  string updated_at = 13; // 更新日時
  repeated Author authors = 14; // 著者一覧
}

// Bookshelf - 本棚の書籍
message Bookshelf {
  int64 id = 1; // 本棚ID
  int64 book_id = 2; // 書籍ID
  string user_id = 3; // ユーザーID
  BookshelfStatus status = 4; // 読書ステータス
  string read_on = 5; // 読み終えた日
  int64 review_id = 6; // レビューID
  string created_at = 7; // 登録日時
  string updated_at = 8; // 更新日時
}

// Author - 著者
message Author {
  string name = 1; // 著者名
  string name_kana = 2; // 著者名(かな)
}

// Review - レビュー
message Review {
  int64 id = 1; // レビューID
  int64 book_id = 2; // 書籍ID
  string user_id = 3; // ユーザーID
  int32 score = 4; // 評価
  string impression = 5; // 感想
  string created_at = 6; // 作成日時
  string updated_at = 7; // 更新日時
}
